# P4

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
common/p4/: headers.p4  proto.p4  util.p4
common/python/utils/p4runtime_lib/: bmv2.py  convert.py  helper.py  switch.py  tofino.py
config/: cfg.py  ports.json
controlplane/: Dockerfile  Makefile  README.md  control_plane.cc  docker-entrypoint.sh  p4runtime_client.cc  p4runtime_client.h  p4runtime_ns_def.inc  p4runtime_ns_undef.inc
controlplane/bcmlt_injector/: README.md  build_run_sdklt.sh
controlplane/client/src/: Makefile  control_plane.cc  p4runtime_client.cc  p4runtime_client.h  p4runtime_ns_undef.inc  p4runtime_server.cc
controlplane/client/test/: docker-test-entrypoint.sh
controlplane/irati/: Makefile.in  README.md  configure
controlplane/irati/librina/: Makefile.am  configure.ac
controlplane/irati/librina/test/: Makefile.am
controlplane/irati/librina/wrap/: Makefile.am
controlplane/irati/librina/wrap/rina-api/: Makefile.am
controlplane/irati/rinad/: Makefile.am  configure.ac
controlplane/npl/: README.md  install_deps.sh
controlplane/npl/src/: cint_sdklt_config.c  connect_bcmlt.py  demo_app_cint_entry_vlan.c  main_demo_app_cint_entry_vlan.c
controlplane/p4/: Dockerfile  Makefile  README.md  docker-entrypoint.sh
controlplane/p4/src/client/: client.cc  client.h  conversions.h  main.cc  p4_structs.h  print.h
controlplane/p4/src/common/: ns_def.inc
controlplane/p4/src/common/data_struct/: blocking_queue.h  semaphore.h
controlplane/p4/src/reference/stratum/: Dockerfile.dev
controlplane/p4/src/server/: docker-entrypoint.sh  server.cc
controlplane/p4/test/: .gitignore  docker-test-server-entrypoint.sh  docker-test-server-mock-entrypoint.sh
controlplane/p4/utils/: tofino_cfg_builder.py
cp_dynamic/: Makefile  dynamic_l2_cp_server.py  dynamic_l2_test.py
cp_dynamic/proto/: routerctl.proto
cp_static/: base.py  controlplane_l2.py  controlplane_l3_ip.py  controlplane_l3_ip_rina.py
dataplane/: README.md
dataplane/bmodel/: .gitignore  README.md  build_run.sh
dataplane/bmodel/efcp_router/: Makefile
dataplane/bmodel/efcp_router/bm_tests/tests/: efcp_test.py  ip_test.py  l2_test.py  nplclass_base.py  nplconfig_base.py  npltest_base.py  tbl_cfg.txt  vlan_efcp_test.py  vlan_ip_test.py
dataplane/bmodel/efcp_router/npl/: bus.npl  constants.npl  debug.npl  efcp_bus.npl  efcp_header_format.npl  efcp_parser.npl  efcp_router.npl  group.npl  header.npl  packet.npl  parser.npl  router.npl  special_function.npl  table.npl
dataplane/bmodel/efcp_router/scripts/: build.sh  load_env.sh  run.sh  test.sh
dataplane/common/tests/: class_base.py  dot1q_efcp_test.py  dot1q_ip_test.py  efcp_test.py  h1_send_efcp_cpu.py  h1_send_efcp_h2.py  h1_send_ipv4_h2.py  h2_send_efcp_h1.py  h2_send_ipv4_h1.py  ip_test.py  l2_test.py  receive_efcp.py  test_base.py  vlan_efcp_test.py  vlan_ip_test.py
dataplane/npl/: README.md
dataplane/npl/bmodel/: README.md
dataplane/npl/bmodel/efcp_router/npl/: debug.npl  group.npl  packet.npl  special_function.npl  table.npl
dataplane/npl/bmodel/efcp_router/scripts/: load_env.sh  test.sh
dataplane/p4/: Makefile  README.md
dataplane/p4/env/: docker-compose.yml
dataplane/p4/env/mininet/: Dockerfile  edf_stratum.py  mn_stratum.py  receive_efcp.py  send_efcp_h1.py  topo.py
dataplane/p4/env/mininet/scripts/: h1_send_efcp_h2.py  h1_send_ipv4_h2.py  h2_send_ipv4_h1.py  pdu_types.py
dataplane/p4/env/p4runtime/: p4runtime-shell-entrypoint.sh  runtime-shell.py
dataplane/p4/env/p4runtime/p4runtime_sh/: p4runtime.py
dataplane/p4/model/: efcp.p4
dataplane/p4/model/efcp/: bfrt.json  efcp.p4pp
dataplane/p4/model/efcp_tna/: efcp_tna.p4
dataplane/p4/p4src/arch/tna/: efcp.p4
dataplane/p4/p4src/arch/v1model/: efcp.p4
dataplane/p4/p4src/common/: headers.p4
dataplane/p4/src/arch/tna/: edf_scapy_models.py  efcp.p4  test.py
dataplane/p4/src/arch/v1model/: efcp.p4
dataplane/p4/src/common/: headers.p4
dataplane/p4/test/arch/tna/: edf_pdu_types.py  edf_scapy_models.py  test.py  tofino_model_terminate.sh  tofino_switch_terminate.sh
p4/: edf-switch.p4  proto.p4  rina-bf.p4  rina-v1model.p4  util.p4
python/: base.py  controlplane_l2.py  controlplane_l3_ip.py  controlplane_vlan.py
scripts/: veth_setup.sh
tests/: EFCP.py  base.py  p4test-l2.py  p4test-l3-ip-rina.py  p4test-l3-ip.py  p4test-vlan.py  ptf.pcap
(+19 files in other folders)
